Enums: When null is represented enforce Optionality.MANDATORY (#3)